force-app/main/default/objects/Hill_Rom_Contracts__c/Hill_Rom_Contracts__c.object-meta.xml
<CustomObject>
    <description>This is a custom object created by Apttus to maintain Hill Rom contracts</description>
    <label>Hill-Rom Contracts</label>
    <nameField>
        <label>Contracts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hill-Rom Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>