force-app/main/default/objects/Hill_Rom_Contracts__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hill-Rom Contracts</relationshipLabel>
    <relationshipName>Hill_Rom_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>