force-app/main/default/objects/Hill_Rom_Contracts__c/fields/Based_on_Price_Year__c.field-meta.xml
<CustomField>
    <fullName>Based_on_Price_Year__c</fullName>
    <label>Based on Price Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2014</fullName>
            </value>
            <value>
                <fullName>2013</fullName>
            </value>
            <value>
                <fullName>2012</fullName>
            </value>
            <value>
                <fullName>2011</fullName>
            </value>
            <value>
                <fullName>2010</fullName>
            </value>
            <value>
                <fullName>NET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>