force-app/main/default/objects/Hill_Rom_Contracts__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <label>Contract Number</label>
    <length>24</length>
    <required>true</required>
    <type>Text</type>
</CustomField>