force-app/main/default/objects/Hill_Rom_Contracts__c/fields/Lead_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contract_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Contract Name</label>
    <referenceTo>Hill_Rom_Contracts__c</referenceTo>
    <relationshipLabel>Hill-Rom Contracts</relationshipLabel>
    <relationshipName>Hill_Rom_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>