force-app/main/default/objects/Hill_Rom_Contracts__c/fields/Lead_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contract_Number__c</fullName>
    <label>Lead Contract Number</label>
    <length>24</length>
    <type>Text</type>
</CustomField>