force-app/main/default/objects/Hill_Rom_Contracts__c/fields/Lead_Contract_Number_new__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contract_Number_new__c</fullName>
    <formula>Lead_Contract_Name__r.Contract_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Contract Number</label>
    <type>Text</type>
</CustomField>