force-app/main/default/objects/Hill_Rom_Contracts__c/fields/Lead_Contract_Publish_Year__c.field-meta.xml
<CustomField>
    <fullName>Lead_Contract_Publish_Year__c</fullName>
    <formula>TEXT(Lead_Contract_Name__r.Based_on_Price_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Contract Publish Year</label>
    <type>Text</type>
</CustomField>