force-app/main/default/objects/Hill_Rom_Contracts__c/fields/Re_Price_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Re_Price_Group_Code__c</fullName>
    <label>Re-Price Group Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AD2</fullName>
            </value>
            <value>
                <fullName>BBD</fullName>
            </value>
            <value>
                <fullName>CAR</fullName>
            </value>
            <value>
                <fullName>HR1</fullName>
            </value>
            <value>
                <fullName>MDG</fullName>
            </value>
            <value>
                <fullName>MSC</fullName>
            </value>
            <value>
                <fullName>NP1</fullName>
            </value>
            <value>
                <fullName>NP2</fullName>
            </value>
            <value>
                <fullName>P5H</fullName>
            </value>
            <value>
                <fullName>PMO</fullName>
            </value>
            <value>
                <fullName>PSF</fullName>
            </value>
            <value>
                <fullName>RRB</fullName>
            </value>
            <value>
                <fullName>SIM</fullName>
            </value>
            <value>
                <fullName>SP2</fullName>
            </value>
            <value>
                <fullName>TPM</fullName>
            </value>
            <value>
                <fullName>TLC</fullName>
            </value>
            <value>
                <fullName>TC5</fullName>
            </value>
            <value>
                <fullName>VC5</fullName>
            </value>
            <value>
                <fullName>VCF</fullName>
            </value>
            <value>
                <fullName>VCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>